--- a/kimiserver/www/kimi/kimiupload.html
+++ b/kimiserver/www/kimi/kimiupload.html
@@ -5,6 +5,7 @@
 <form action="upload.php" method="post" enctype="multipart/form-data">
     Select image to upload:
     <input type="file" name="kimi" id="kimi">
+    <input type="text" name="namafile">
     <input type="submit" value="Upload Image" name="submit">
 </form>
 
